--- a/first_payment_letter.qmd
+++ b/first_payment_letter.qmd
@@ -1,6 +1,6 @@
 # First Payment Letter
 
-Note, to performm the mail merge from the focus blue uplod file, you must use the word document version of this letter which is saved at P:\studydata\risk2\administration\financial
+Note, to performm the mail merge from the focus blue uplod file, you must use the word document version of this letter which is saved at P:\\studydata\\risk2\\administration\\financial
 
 
 ![](images/payment_letter_header.jpeg)
