--- a/screening_survey.qmd
+++ b/screening_survey.qmd
@@ -1,5 +1,109 @@
 # Screening Survey
 
+
+The screening survey will serve as our recruitment database.
+
+Participants complete a brief screening questionnaire on Qualtrics that
+clearly communicates whether people screened in or out. For people who
+screen in, they schedule a meeting with us.
+
+After completing the Qualtrics Screening survey, Participants who are
+considered eligible will be redirected to the Doodle Bookable calendar (
+[https://doodle.com/mm/starstudy/phone-visit)](https://doodle.com/mm/starstudy/phone-visit))
+
+-   Participants select the time block that works best for them
+    (10:00am-12:00pm OR 2:00pm-4:00pm)
+
+-   Participants can only select one time block, when they select the
+    time block they are asked to give a name, email, and phone number
+    (the request for phone number is a custom question)
+
+-   Currently, participants must select an appointment two days in
+    advance (minimum notice setting is adjustable)
+
+-   Currently, participants can select appointments up to 3 weeks into
+    the future (future horizon setting is adjustable)
+
+**Once a participant selects a time block...**
+
+*Two emails are sent to the participant.*
+
+-   Email confirming the appointment has been booked. It shows as having
+    been sent from "STAR study staff"
+    (\<[reply-to\@doodle.com](mailto:reply-to@doodle.com)\>). Subject
+    line is...
+
+    -   "Confirmation: You've booked a meeting with STAR study staff on
+        Doodle Bookable Calendar"
+
+-   A second Email is an invitation to the study phone visit. It shows
+    as having been sent from
+    [star_psych\@wisc.edu](mailto:star_psych@wisc.edu). Subject line
+    is...
+
+    -   "Invitation: STAR Study Phone Visit w/ {Participant Name}\@ Fri
+        Mar 26, 2021 Xam - Xpm (EDT) ({Participant Email})
+
+*One email is sent to the study email*
+
+-   When a participant books an appointment, an email is sent to
+    star_psych\@wisc.edu email, subject line is...
+
+    -   "{Insert Name} booked a meeting with you on your Doodle Bookable
+        Calendar Star Study Phone Visit"
+
+-   Also, when a participant books an appointment, the appointment
+    appears on the google calendar for
+    [star_psych\@wisc.edu](mailto:star_psych@wisc.edu) . The name of the
+    appointment is...
+
+    -   "Star Study Phone Visit w/ {Insert Name)"
+
+\*\*If a participant wants to reschedule an appointment...
+
+-   Participant must open the email from "**STAR study staff"**
+    (\<[reply-to\@doodle.com](mailto:reply-to@doodle.com)\>) and click
+    on the "Reschedule" button located in the message
+
+Two emails are sent to participant
+
+-   One is a notification of cancellation to the study phone visit. It
+    shows as having been sent from
+    [star_psych\@wisc.edu](mailto:star_psych@wisc.edu). Subject line
+    is...
+
+    -   "Canceled event: STAR Study Phone Visit w/ {Participant Name}\@
+        {Previous Appointment Date}, 2021 Xam- Xpm (EDT) ({Participant
+        Email})
+
+-   One confirming the NEW appointment has been book. It shows as having
+    been sent from "**STAR study staff"**
+    (\<[reply-to\@doodle.com](mailto:reply-to@doodle.com)\>). Subject
+    line is...
+
+    -   "Confirmation: You've booked a meeting with STAR study staff on
+        Doodle Bookable Calendar"
+
+One email is sent to the study email.
+
+-   When a participant reschedules an appointment, an email is sent to
+    star_psych\@wisc.edu email, subject line is...
+
+    -   "{Insert Name} rescheduled the meeting with you on your Doodle"
+
+-   Also, when a participant books an appointment, the New appointment
+    appears on the google calendar for
+    [star_psych\@wisc.edu](mailto:star_psych@wisc.edu) . The name of the
+    appointment is...
+
+    -   "Star Study Phone Visit w/ {Insert Name)"
+
+-   NOTE. The old appointment disappears from the calendar
+
+## Screening Survey Questions
+
+
+
 These questions are about participating in a research study. We are
 looking for people 18 years old or older, who are receiving medication
 assisted treatment (MAT) from an outpatient treatment program or
